Move DebugAdapterBaseTestCase utils to TestUtils
Move resumeProgram() and waitForDebugHit() to TestUtils

Move remaining utils

Move BaseTestCase utils to DebugAdapterBaseTestCase

Move all utils completely from test to main

Fix code warning issues

Fix initial SpotBugs issues

Add spotbugs-exclude.xml

Fix spotbug issue

Rename util package

Fix minor issues